Wed Sep  7 17:13:05 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Updated Unicode version to 9.0.0 [Feature #12513]

	* unicode/9.0.0/casefold.h, name2ctype.h, unicode/data/9.0.0:
	  new directories/files for Unicode version 9.0.0

Wed Sep  7 16:00:45 2016  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Allow http to https redirection.
	  Note that https to http is still forbidden.
	  [ruby-core:20485] [Feature #859] by Roman Shterenzon.

Wed Sep  7 14:56:59 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/csv.rb (CSV::{Row,Table}#{each,delete_if}): returns an enumerator
	  if no block is given. [ruby-core:75346] [Feature #12347]

	* test/csv/test_row.rb: add test for above.

	* test/csv/test_table.rb: ditto.

Wed Sep  7 14:50:01 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: update to power_assert 0.3.1.

Wed Sep  7 12:16:09 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/*, test/psych/*: Update psych-2.1.1
	  This version fixed following pull requests.
	  https://github.com/tenderlove/psych/pull/284
	  https://github.com/tenderlove/psych/pull/276

Wed Sep  7 11:51:06 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0.beta1
	  This version is mostly same as r56072. It contains to remove code
	  for Ruby 1.8

Tue Sep  6 09:23:06 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/rdoc.gemspec: partly reverted for default gem installer.
	  upstream configuration is not working on ruby core repository.

Mon Sep  5 19:35:22 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc/rdoc master(f191513)
	  https://github.com/rdoc/rdoc/blob/master/History.rdoc#423--2016--
	  https://github.com/rdoc/rdoc/blob/master/History.rdoc#422--2016-02-09

Sun Sep  4 00:17:55 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* proc.c: [DOC] fix Object#define_singleton_method and
	  main.define_method return value. [ci skip]
