@@ -1,3 +1,8 @@
+Wed Sep  7 17:21:55 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/timeout.rb (Timeout#timeout): add custom error message
+	  argument.  [Feature #11650]
+
 Wed Sep  7 17:13:05 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* common.mk: Updated Unicode version to 9.0.0 [Feature #12513]
